# NUCLEUS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
bubbleformer/: modules.py  test.py
bubbleformer/config/: default.yaml
bubbleformer/config/data_cfg/: poolboiling.yaml  poolboiling64.yaml  poolboiling_combined.yaml  poolboiling_gravity.yaml  poolboiling_saturated.yaml  poolboiling_subcooled.yaml
bubbleformer/data/: __init__.py  batching.py  datamodule.py  dataset.py  downsampled_dataset.py  normalize.py
bubbleformer/layers/: __init__.py  attention.py  conv_layers.py  fluid_param_embedding.py  linear_layers.py  patching.py  positional_encoding.py  transformer_block.py
bubbleformer/models/: __init__.py  _api.py  axial_moe.py  axial_vit.py  moe.py  neighbor_moe.py  neighbor_moe_fluid_embed.py  neighbor_vit.py  vit.py  vit_moe.py
bubbleformer/plot/: plotting.py
bubbleformer/utils/: losses.py  lr_schedulers.py  normalize.py  physical_metrics.py  plot_utils.py  sdf_reinit.py
config/: default.yaml
config/data_cfg/: flowboiling_chf.yaml  flowboiling_velscale.yaml  poolboiling.yaml  poolboiling64.yaml  poolboiling64_gravity.yaml  poolboiling64_op250.yaml  poolboiling_gravity.yaml
env/: bubbleformer_conda.yaml  bubbleformer_cpu.yaml  bubbleformer_gpu.yaml  requirements.txt
examples/: data_visualization.ipynb
samples/: sample_1.hdf5  sample_2.hdf5
scripts/: check_data_distribution.py  inf.py  inference.py  inference_autoregressive.ipynb  train.py  viz_attention_probs.py
src/nucleus/: modules.py
src/nucleus/layers/: mlp.py
(+19 files in other folders)
